# android

./: .gitignore  .gitmodules  Activity.java.in  CMakeLists.txt  README.md  sign.sh  strings.xml.in
app/: build.gradle.in
app/jni/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
